# EspinaVolumeEditor

./: AxesRender.cpp  AxesRender.cxx  AxesRender.h  BoxSelectionRepresentation2D.cpp  BoxSelectionRepresentation2D.cxx  BoxSelectionRepresentation2D.h  BoxSelectionRepresentation3D.cpp  BoxSelectionRepresentation3D.cxx  BoxSelectionRepresentation3D.h  BoxSelectionWidget.cpp  BoxSelectionWidget.cxx  BoxSelectionWidget.h  CMakeLists.txt  CMakeLists.txt~  ContourRepresentation.cpp  ContourRepresentation.cxx  ContourRepresentation.h  ContourRepresentationGlyph.cpp  ContourRepresentationGlyph.cxx  ContourRepresentationGlyph.h  ContourWidget.cpp  ContourWidget.cxx  ContourWidget.h  Coordinates.cpp  Coordinates.cxx  Coordinates.h  DataManager.cpp  DataManager.cxx  DataManager.h  Editor.cpp  Editor.cxx  EditorOperations.cpp  EditorOperations.cxx  EditorOperations.h  EspinaEditor.rc.in  EspinaVolumeEditor.cpp  EspinaVolumeEditor.h  EspinaVolumeEditor.ui  FocalPlanePointPlacer.cpp  FocalPlanePointPlacer.cxx  (+60 more)
images/: MRIcrop-orig.mhd  MRIcrop-orig.zraw  MRIcrop-seg.segmha
installer/: script.iss.in
